--- a/index.html
+++ b/index.html
@@ -4,12 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
+    <title>Infinite Scroll</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <link rel="icon" href="https://www.google.com/s2/favicons?domain=css-tricks.com">
 </head>
 <body>
+    <!-- Title -->
+    <h1>Unsplash API - Infinite Scroll</h1>
+
+    <!-- Loader -->
+    <div class="loader" id="loader" hidden>
+        <img src="loader.svg" alt="Loading...">
+    </div>
+    <!-- Image Container -->
+    <div class="image-container" id="image-container">
+        <img src="https://images.unsplash.com/photo-1633303422361-5c47486b2a6b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=692&q=80" alt="">
+        <img src="https://images.unsplash.com/photo-1633303422361-5c47486b2a6b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=692&q=80" alt="">
+        <img src="https://images.unsplash.com/photo-1633303422361-5c47486b2a6b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=692&q=80" alt="">
+    </div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
