--- a/index.html
+++ b/index.html
@@ -10,18 +10,14 @@
 </head>
 <body>
     <!-- Title -->
-    <h1>Unsplash API - Infinite Scroll</h1>
+    <h1>Infinite Scroll</h1>
 
     <!-- Loader -->
-    <div class="loader" id="loader" hidden>
+    <div class="loader" id="loader">
         <img src="loader.svg" alt="Loading...">
     </div>
     <!-- Image Container -->
-    <div class="image-container" id="image-container">
-        <img src="https://images.unsplash.com/photo-1633303422361-5c47486b2a6b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=692&q=80" alt="">
-        <img src="https://images.unsplash.com/photo-1633303422361-5c47486b2a6b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=692&q=80" alt="">
-        <img src="https://images.unsplash.com/photo-1633303422361-5c47486b2a6b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=692&q=80" alt="">
-    </div>
+    <div class="image-container" id="image-container"></div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
